--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 <body>
     <!-- Header -->
     <header class="main-header">
-        <div class="container"
-            style="display: flex; justify-content: space-between; align-items: center; padding: 15px 0;">
-            <div class="logo" id="siteLogo" style="font-weight: 800; font-size: 24px; color: var(--primary);">
-                PH STORE
+        <div class="container header-inner">
+            <div class="logo" id="siteLogo">
+                <!-- Logotipo Oficial -->
             </div>
-            <div id="userMenu" style="display: flex; align-items: center; gap: 15px;">
+            <div id="userMenu">
                 <!-- Rendered by JS -->
             </div>
-            <button id="openCartBtn" class="btn btn-outline"
-                style="padding: 8px 15px; display: flex; align-items: center; gap: 8px; position: relative;">
+            <button id="openCartBtn" class="btn btn-outline">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <circle cx="9" cy="21" r="1"></circle>
@@ -51,7 +49,7 @@
 
     <!-- Footer -->
     <footer
-        style="text-align: center; padding: 60px 20px 40px; border-top: 1px solid var(--border-color); margin-top: 60px; background: var(--bg-secondary);">
+        style="text-align: center; padding: 60px 20px 40px; border-top: 1px solid var(--border-color); margin-top: 60px; background: var(--bg-color);">
         <div class="container">
             <h3
                 style="font-size: 28px; font-weight: 700; margin-bottom: 30px; max-width: 600px; margin-left: auto; margin-right: auto; line-height: 1.4;">
