--- a/admin.html
+++ b/admin.html
@@ -397,6 +397,10 @@
         </div>
     </div>
 
+    <!-- Firebase SDK Compat -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
+
     <script src="js/database.js"></script>
     <script src="js/admin.js"></script>
 </body>
