--- a/admin.html
+++ b/admin.html
@@ -132,6 +132,16 @@
                     </svg>
                     Ver Loja
                 </button>
+                <button id="saveGlobalBtn" class="btn btn-primary"
+                    style="background: #25d366; color: white; border: none; font-weight: 600; padding: 10px 20px; font-size: 14px; display: flex; align-items: center; gap: 8px;">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+                        <polyline points="17 21 17 13 7 13 7 21"></polyline>
+                        <polyline points="7 3 7 8 15 8"></polyline>
+                    </svg>
+                    Salvar alterações
+                </button>
                 <a href="#" id="logoutBtn"
                     style="color: red; text-decoration: none; font-size: 14px; display: flex; align-items: center; gap: 5px; margin-left: 10px;">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -396,10 +406,6 @@
             </form>
         </div>
     </div>
-
-    <!-- Firebase SDK Compat -->
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
 
     <script src="js/database.js"></script>
     <script src="js/admin.js"></script>
